--- a/reports/unblinded.bib
+++ b/reports/unblinded.bib
@@ -87,3 +87,22 @@
     year = {2008},
     doi = {10.18637/jss.v027.i03},
   }
+
+@Article{bitcoin,
+title = {Midterm Project: Analysis of BTC and DOGE},
+author = {Anonymous},
+journal = {STATS 531 Winter 2024},
+url = {https://ionides.github.io/531w24/midterm_project/project02/blinded.html}}
+
+@Article{energy,
+title = {Investigating Trends in Household Electricity Consumption},
+author = {Anonymous},
+journal = {STATS 531 Winter 2024},
+url = {https://ionides.github.io/531w24/midterm_project/project12/blinded.html}}
+
+@Article{fires,
+title = {Statistical Modeling and Analysis of California Wildfires Time Series},
+author = {Anonymous},
+journal = {STATS 531 Winter 2022},
+url = {https://ionides.github.io/531w22/midterm_project/project16/blinded.html}}
+
