--- a/reports/unblinded.bib
+++ b/reports/unblinded.bib
@@ -88,21 +88,19 @@
     doi = {10.18637/jss.v027.i03},
   }
 
-@Article{bitcoin,
-title = {Midterm Project: Analysis of BTC and DOGE},
-author = {Anonymous},
-journal = {STATS 531 Winter 2024},
-url = {https://ionides.github.io/531w24/midterm_project/project02/blinded.html}}
+@misc{24project2,
+ title={Midterm Project: Analysis of BTC and DOGE},
+ year={2024},
+ url={https://ionides.github.io/531w24/midterm_project/project02/blinded.html}
+}
 
-@Article{energy,
-title = {Investigating Trends in Household Electricity Consumption},
-author = {Anonymous},
-journal = {STATS 531 Winter 2024},
-url = {https://ionides.github.io/531w24/midterm_project/project12/blinded.html}}
-
-@Article{fires,
-title = {Statistical Modeling and Analysis of California Wildfires Time Series},
-author = {Anonymous},
-journal = {STATS 531 Winter 2022},
-url = {https://ionides.github.io/531w22/midterm_project/project16/blinded.html}}
-
+@Article{ljungbox,
+  title   = {On a Measure of Lack of Fit in Time Series Models},
+  author  = {Ljung, G. M. and Box, G. E. P.},
+  journal = {Biometrika},
+  volume  = {65},
+  number  = {2},
+  pages   = {297--303},
+  year    = {1978},
+  doi     = {10.1093/biomet/65.2.297},
+}
