adding deleted bib files

--- a/reports/unblinded.bib
+++ b/reports/unblinded.bib
@@ -94,6 +94,24 @@
  url={https://ionides.github.io/531w24/midterm_project/project02/blinded.html}
 }
 
+@Article{bitcoin,
+title = {Midterm Project: Analysis of BTC and DOGE},
+author = {Anonymous},
+journal = {STATS 531 Winter 2024},
+url = {https://ionides.github.io/531w24/midterm_project/project02/blinded.html}}
+
+@Article{energy,
+title = {Investigating Trends in Household Electricity Consumption},
+author = {Anonymous},
+journal = {STATS 531 Winter 2024},
+url = {https://ionides.github.io/531w24/midterm_project/project12/blinded.html}}
+
+@Article{fires,
+title = {Statistical Modeling and Analysis of California Wildfires Time Series},
+author = {Anonymous},
+journal = {STATS 531 Winter 2022},
+url = {https://ionides.github.io/531w22/midterm_project/project16/blinded.html}}
+
 @Article{ljungbox,
   title   = {On a Measure of Lack of Fit in Time Series Models},
   author  = {Ljung, G. M. and Box, G. E. P.},
